--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 
       <main class="main-content">
         <header>
+          <button id="sidebar-toggle-btn" class="control-btn">
+            <i class="fa-solid fa-bars"></i>
+          </button>
           <h1 id="current-date-header"></h1>
           <h3 id="live-clock"></h3>
           <div id="reminder-display-container"></div>
